Add public access config and index.html for add-in deployment

--- a/apps/outlook-addin/vercel.json
+++ b/apps/outlook-addin/vercel.json
@@ -3,6 +3,7 @@
   "outputDirectory": "dist",
   "framework": null,
   "installCommand": "npm install",
+  "public": true,
   "headers": [
     {
       "source": "/(.*)",
@@ -25,5 +26,7 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {},
+  "rewrites": []
 }
