--- a/apps/api-backend/requirements.txt
+++ b/apps/api-backend/requirements.txt
@@ -6,4 +6,5 @@ python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 PyJWT==2.8.0
 python-dotenv==1.0.0
-requests==2.31.0 
+requests==2.31.0
+psutil==5.9.6 
