--- a/env.example
+++ b/env.example
@@ -2,16 +2,16 @@
 MICROSOFT_CLIENT_ID=
 MICROSOFT_TENANT_ID=
 MICROSOFT_CLIENT_SECRET=
-MICROSOFT_REDIRECT_URI=https://smartmeet.vercel.app/connect/microsoft/callback
+MICROSOFT_REDIRECT_URI=https://smart-meet-five.vercel.app/connect/microsoft/callback
 
 # Google
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=https://smartmeet.vercel.app/connect/google/callback
+GOOGLE_REDIRECT_URI=https://smart-meet-five.vercel.app/connect/google/callback
 
 # App
 JWT_SECRET_KEY=supersecret
-FRONTEND_URL=https://smartmeet.vercel.app
+FRONTEND_URL=https://smart-meet-five.vercel.app
 DATABASE_URL=
 
 # Development URLs (for local development)
