--- a/apps/api-backend/requirements.txt
+++ b/apps/api-backend/requirements.txt
@@ -1,10 +1,21 @@
+# Core FastAPI dependencies
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-httpx==0.25.2
+uvicorn==0.24.0
 pydantic==2.5.0
-python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
-PyJWT==2.8.0
+
+# HTTP client
+httpx==0.25.2
+
+# Authentication & Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
-requests==2.31.0
-psutil==5.9.6 
+
+# Development tools
+pytest==7.4.3
+pytest-asyncio==0.21.1
+
+# Utilities
+click==8.1.7
+rich==13.7.0 
