--- a/apps/outlook-addin/package.json
+++ b/apps/outlook-addin/package.json
@@ -1,14 +1,15 @@
 {
   "name": "smartmeet-outlook-addin",
   "version": "1.0.0",
-  "description": "SmartMeet Outlook Add-in for intelligent meeting scheduling",
+  "description": "SmartMeet Outlook Add-in - Calendar Integration",
   "private": true,
   "scripts": {
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
-    "dev": "webpack serve --mode=development",
-    "start": "webpack serve --mode=development --port 3000",
-    "validate": "office-addin-manifest validate manifest.xml"
+    "dev": "webpack serve --mode=development --port 3001",
+    "start": "webpack serve --mode=development --port 3001",
+    "start:desktop": "office-addin-debugging start manifest-dev.xml desktop",
+    "validate": "office-addin-manifest validate manifest-dev.xml"
   },
   "dependencies": {
     "@types/office-js": "^1.0.374",
@@ -20,17 +21,14 @@
     "@types/react-dom": "^18.2.17",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
-    "office-addin-dev-certs": "^1.11.3",
-    "source-map-loader": "^4.0.1",
-    "style-loader": "^3.3.3",
+    "office-addin-debugging": "^5.0.15",
+    "office-addin-dev-certs": "^2.0.3",
+    "office-addin-manifest": "^1.12.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  },
-  "homepage": "https://smartmeet.vercel.app/outlook-addin/"
+  }
 }
